# that_game_i_always_wanted_to_make

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  glad.c  main.cpp
src/core/: CMakeLists.txt  camera.cpp  camera.h  clock.cpp  clock.h  exception.h  glad.c  glad.h  object3d.cpp  object3d.h  object3d_interface.h  shader_builder.cpp  shader_builder.h  shader_builder.hpp  shader_types.h  texture_loading.h  utilities.h  utilities.hpp  vertex_object.h  vertex_object.hpp
src/core/test/: CMakeLists.txt  main.cpp  object3d_fixture.h  test_camera.cpp  test_clock.cpp  test_object3d.cpp  utilities.h
src/demos/: 3d_boxes.cpp  CMakeLists.txt  simple_triangle.cpp
src/gfx/: CMakeLists.txt  shader_builder.cpp  shader_builder.h  shader_builder.hpp  texture_loading.h  vertex_object.h
src/glad/: glad.h
src/shaders/: tex.frag
